--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-route": "~1.4.8",
-    "angular-resource": "~1.4.8"
+    "angular-resource": "~1.4.8",
+    "bootstrap-rating-input": "~0.3.0",
+    "angular-animate": "~1.4.9"
   }
 }
