added user favorites feature, as a result, changed the user and dishes model so that they both had array's that ref each other to create relationship. Also added page to user to show the dishes they like

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,11 +33,14 @@
         "public/javascript/controllers/globalController.ts",
         "public/javascript/controllers/HomeController.ts",
         "public/javascript/controllers/UserController.ts",
+        "public/javascript/controllers/userFavoriteController.ts",
+        "public/javascript/services/favoriteService.ts",
         "public/javascript/services/HomeService.ts",
         "public/javascript/services/HTTPFactory.ts",
         "public/javascript/services/reviewService.ts",
         "public/javascript/services/userService.ts",
         "routes/dishRoutes.ts",
+        "routes/favoritesRoutes.ts",
         "routes/reviewRoutes.ts",
         "routes/userRoutes.ts",
         "server.ts",
