--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,11 @@
     "angular-route": "~1.4.8",
     "angular-resource": "~1.4.8",
     "bootstrap-rating-input": "~0.3.0",
-    "angular-animate": "~1.4.9"
+    "angular-animate": "~1.4.9",
+    "angular-ui-utils": "~3.0.0",
+    "angular-ui-map": "~0.5.0"
+  },
+  "resolutions": {
+    "angular-ui-utils": "~3.0.0"
   }
 }
